style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Poppins', sans-serif;
}

body {
  background: #e5e5e5;
}

li {
  text-decoration: none;
}

.container-section {
  border-bottom-left-radius: 80px;
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: #fff;
  padding: 10px 24px;
  position: fixed;
  width: 100%;
}

.header .logo {
  font-weight: bold;
  font-size: 18px;
  line-height: 20px;
  color: #6070ff;
  transform: scale(1);
}

.header .logo a {
  text-decoration: none;
  color: #6070ff;
}

.header .logo:hover {
  transform: scale(3);
  transition: all 5s;
}

.header .bars {
  color: #acb7c3;
}

.menu-content {
  display: none;
}

.intro {
  background-image: url(./img/header-shapes.svg);
  background-repeat: no-repeat;
  background-size: cover;
  background-color: #fff;
  border-bottom-left-radius: 120px;
  display: flex;
  flex-direction: column;
  padding: 20px;
  background-position: center;
  padding-bottom: 138px;
}

.intro h2 {
  font-weight: 700;
  font-size: 40px;
  line-height: 52px;
  margin: 100px 0 15px 0;
  color: #172b4d;
}

.intro p {
  color: #344563;
  line-height: 24px;
  font-size: 16px;
  margin-bottom: 15px;
}

.connect {
  color: #7f8cff;
  padding-bottom: 12px;
}

.socials {
  display: flex;
  margin: 0;
}

.presentation .socials a {
  margin-right: 20px;
}

.socials li {
  list-style: none;
}

.grid-container {
  display: grid;
  padding: 10px 0 26px 0;
  background-color: #e5e5e5;
}

.desktop-img {
  display: none;
}

.desktop-lang {
  display: none;
}

.desk-img {
  margin-left: 30vw;
}

.cards {
  grid-column: 1/9;
  display: flex;
  flex-direction: column;
  background: #fff;
  border: 2px solid #dfe1e6;
  border-radius: 16px;
  padding: 16px 16px;
  margin: 50px 24px;
}

.h2 {
  margin: 12px 0 50px 0;
  color: #172b4d;
  font-weight: 700;
  font-size: 32px;
  line-height: 44px;
}

.top {
  display: flex;
  list-style: none;
  font-weight: 600;
  font-size: 13px;
  line-height: 16px;
  margin: 0 -12px;
  margin-bottom: 12px;
}

.top li {
  padding: 0 12px;
}

.top .canopy {
  color: #344563;
}

.dev {
  color: #7a869a;
}

.para {
  color: #344563;
  line-height: 24px;
  font-size: 15px;
  margin-bottom: 20px;
}

.projects ul {
  display: flex;
  list-style: none;
  font-size: 13px;
  line-height: 16px;
  color: #6070ff;
  font-weight: 500;
  margin: 0 -12px;
  margin-bottom: 15px;
}

.socials2 li {
  list-style: none;
}

.works li {
  list-style-type: none;
}

.projects ul li {
  background: #ebebff;
  border-radius: 8px;
  padding: 4px 12px;
  margin: 0 12px;
}

.socials2 {
  display: flex;
  padding-top: 20px;
  padding-bottom: 20px;
}

.intro2 .socials2 a {
  margin-right: 20px;
  margin-left: 10px;
  padding-top: 20px;
}

.contact-section {
  background: #fff;
}

.btn {
  background-color: #fff;
  border: none;
  border: 1px solid #396df2;
  border-radius: 6px;
  color: #396df2;
  padding: 10px 15px;
  margin: -3px 0 10px 0;
  text-align: center;
  display: inline-block;
  font-size: 16px;
  font-family: inherit;
  cursor: pointer;
}

.btn:hover {
  color: #fff;
  background: #6070ff;
  box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
}

/* About-Section */

.intro2 {
  background-color: #fff;
  display: flex;
  flex-direction: column;
}

.intro2 h2 {
  font-weight: bold;
  font-size: 40px;
  line-height: 52px;
  margin: 0;
  margin-bottom: 12px;
  color: #172b4d;
}

.intro2 p {
  color: #344563;
  font-size: 16px;
  margin-bottom: 12px;
}

span.chevron {
  color: #acb7c3;
  display: block;
}

.works {
  display: block;
}

.langs {
  display: flex;
  flex-direction: column;
  margin-bottom: 35px;
  padding: 0 25px 20px 8px;
}

.dropdown {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 10px 0;
}

.work-list {
  display: flex;
  align-items: center;
  background: #f7f7f9;
  border-radius: 8px;
  margin: 5px 0;
  padding: 5px 0;
}

.text-1 {
  font-weight: 500;
  font-size: 20px;
  color: #253858;
}

.text-2 {
  font-weight: 500;
  font-size: 15px;
  color: #253858;
}

.text-3 {
  font-weight: 500;
  font-size: 15px;
  color: #253858;
}

.frame-skills {
  display: flex;
  justify-content: space-between;
  margin-bottom: 50px;
  border-bottom: 1px solid #dfe1e6;
  padding: 0 25px 20px 8px;
}

/* Contact form */

.contact-form {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-image: url('./img/contact-form-shape.png');
  background-color: #6070ff;
  background-size: cover;
  background-repeat: no-repeat;
  border-top-left-radius: 50px;
  padding: 18px;
  margin: 0 auto;
}

.contact-form p {
  color: #ebebff;
  margin: 10px 0 50px 0;
  font-weight: 400;
  font-size: 20px;
  line-height: 28px;
  text-align: center;
}

.contact-form h2 {
  color: #fff;
  text-align: center;
  margin-top: 128px;
  font-size: 40px;
}

.form-control {
  border-radius: 8px;
  border: solid 1px #cfd8dc;
  margin-bottom: 20px;
  padding: 15px;
  font-weight: 400;
  font-size: 17px;
  line-height: 20px;
  width: 100%;
}

.form {
  display: flex;
  flex-direction: column;
}

.text-area {
  color: #b3bac5;
}

.form-control::placeholder {
  font-size: 20px;
}

input.form-control::placeholder {
  color: #172b4d;
}

.contact-form img {
  position: relative;
  left: calc(50% - 134px / 2 - 0.5px);
  bottom: 8px;
  background: #0d151e;
  border-radius: 10px;
}

.about-section {
  display: flex;
  flex-direction: column;
  background: #fff;
  padding: 114px 24px;
  border-top-right-radius: 80px;
}

/* Media-Queries */
@media screen and (min-width: 992px) {
  body {
    font-family: "Poppins", sans-serif;
  }

  .header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #fff;
    padding: 25px 155px;
  }

  .header .bars {
    display: none;
  }

  .menu-content ul {
    display: flex;
    align-items: center;
    text-align: center;
    list-style: none;
    margin: 0 -12px;
  }

  .menu-content li {
    padding: 0 12px;
  }

  .menu-content a {
    text-decoration: none;
    font-size: 15px;
    font-weight: 500;
    color: #344563;
  }

  .menu-content {
    display: flex;
  }

  .intro {
    background-image: url(./img/header_bg-desktop.svg);
    background-repeat: no-repeat;
    background-size: contain;
    background-color: #fff;
    background-position: center;
    padding: 302px 260px;
  }

  .intro h2 {
    color: #091e42;
    letter-spacing: 0.37px;
    font-size: 48px;
    line-height: 60px;
    margin-bottom: 24px;
  }

  .intro p {
    margin-bottom: 24px;
  }

  /* Grid */
  .grid-container {
    display: grid;
    grid-template: 100% 100%;
    padding: 5%;
  }

  .content-wrap {
    padding: 48px 46px;
  }

  .cards img,
  .cards .content-wrap {
    width: 50%;
  }

  .reverse {
    flex-direction: row-reverse !important;
  }

  .reverse .content-wrap {
    padding-left: 20px;
    padding-right: 20px;
  }

  .langs {
    margin-bottom: 5px;
  }

  .cards {
    flex-direction: row;
  }

  .work-images {
    height: 448px;
  }

  .content-wrap2 {
    padding: 46px;
  }

  .projects ul {
    margin-bottom: 32px;
  }

  .desktop-lang {
    display: flex;
    margin-bottom: 69px;
  }

  .desktop-lang img {
    margin-left: 10px;
    margin-top: -55px;
  }

  .work-lang {
    display: flex;
  }

  .contact-form {
    background-image: url(./img/contact-form-bg-desktop.png);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
  }

  .h2 {
    font-weight: 700;
    line-height: 52px;
    color: #091e42;
    margin: 0;
    margin-bottom: 32px;
  }

  .para {
    color: #344563;
    line-height: 24px;
    font-size: 14px;
    font-weight: 400;
  }

  .top {
    padding-right: 10px;
    font-weight: 500;
    font-size: 18px;
    line-height: 24px;
  }

  .about-section {
    flex-direction: row;
    padding: 142px;
  }

  .about-section .about {
    width: 40%;
  }

  .about-section .language {
    width: 60%;
    padding: 24px 36px;
  }

  .intro2 p {
    font-weight: 400;
    font-size: 16px;
    line-height: 24px;
  }

  .works li {
    padding-bottom: 6px;
  }

  .work-list {
    flex-direction: column;
    align-items: baseline;
    margin: 0 6px;
    padding: 5px 12px;
  }

  .text-1 {
    margin-bottom: 20px;
  }

  .text-3 {
    margin-right: 40px;
  }

  .border-bottom {
    border-bottom: 1px solid #dfe1e6;
  }

  .chevron span {
    padding-left: 100px;
  }

  .form {
    width: 447px;
  }

  .form-control {
    border-radius: initial;
  }

  .form-para {
    padding-inline: 35%;
  }

  .btn {
    margin-left: 34%;
  }
}

